--- a/quarkus-pekko/pom.xml
+++ b/quarkus-pekko/pom.xml
@@ -242,6 +242,19 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.hubspot.maven.plugins</groupId>
+                <artifactId>prettier-maven-plugin</artifactId>
+                <version>0.22</version>
+                <configuration>
+                    <prettierJavaVersion>2.6.0</prettierJavaVersion>
+                    <printWidth>100</printWidth>
+                    <tabWidth>4</tabWidth>
+                    <useTabs>false</useTabs>
+                    <ignoreConfigFile>false</ignoreConfigFile>
+                    <ignoreEditorConfig>false</ignoreEditorConfig>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
